Update with cards

--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@angular/cli": "~7.1.4",
     "@angular/compiler-cli": "~7.1.0",
     "@angular/language-service": "~7.1.0",
+    "@sparkdesignsystem/spark-card": "^4.0.3",
     "@sparkdesignsystem/spark-core": "^10.1.1",
     "@sparkdesignsystem/spark-core-angular": "^8.0.9",
+    "@sparkdesignsystem/spark-extras-angular-card": "^3.0.11",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
